# file_service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 441b8c25ef72_initial_migration.py
configs/: config.example.yaml
src/: __init__.py
src/api/: exceptions.py  server.py
src/api/routes/v1/: __init__.py  file.py
src/api/schemas/v1/: file.py
src/celery/: app.py  tasks.py
src/core/: config.py  database.py  logger.py  s3.py
src/entities/: file_meta.py
src/repositories/: file_meta.py
src/services/: file.py
tests/repositories/: conftest.py  file_meta_test.py
tests/utils/: singleton_test.py
