[tool.poetry]
name = "file-service"
version = "0.1.0"
description = ""
authors = ["GAKiknadze <gakiknadze@yandex.ru>"]
license = "MPL-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.12"}
python-multipart = "^0.0.20"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.40"
aioboto3 = "^14.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
