[tool.poetry]
name = "file-service"
version = "0.1.0"
description = ""
authors = ["GAKiknadze <gakiknadze@yandex.ru>"]
license = "MPL-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.12"}
python-multipart = "^0.0.20"
pydantic = "^2.11.3"
pydantic-settings = {extras = ["yaml"], version = "^2.9.1"}
sqlalchemy = "^2.0.40"
aioboto3 = "^14.1.0"
pyyaml = ">=6.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
alembic = "^1.15.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
isort = "isort ."
black = "black ."
format = ["isort", "black"]
mypy = "mypy ."
flake = "flake8 ./src --max-line-length=127"
check = ["mypy", "flake"]
test = "pytest --cov=src ./tests -v"
